--- a/src/locales/da.json
+++ b/src/locales/da.json
@@ -1,29 +1,47 @@
 {
-  "warrantyClaimsPortal": "Portal for Garantikrav",
+  "warrantyClaimsPortal": "Garanti Krav Portal",
   "home": "Hjem",
   "newClaim": "Nyt Krav",
   "checkStatus": "Tjek Status",
   "admin": "Admin",
-  "login": "Log Ind",
-  "logout": "Log Ud",
-  "submitClaim": "Indsend et Krav",
+  "login": "Log ind",
+  "logout": "Log ud",
+  "submitClaim": "Indsend Krav",
   "orderNumber": "Ordrenummer",
-  "email": "E-mail",
+  "email": "Email",
   "name": "Navn",
   "street": "Gade",
   "postalCode": "Postnummer",
   "city": "By",
   "phoneNumber": "Telefonnummer",
   "brand": "Mærke",
-  "problemDescription": "Problembeskrivelse",
+  "problemDescription": "Problem Beskrivelse",
   "submit": "Indsend",
-  "checkClaimStatus": "Tjek Kravstatus",
+  "submitting": "Indsender...",
+  "checkClaimStatus": "Tjek Krav Status",
   "status": "Status",
   "submissionDate": "Indsendelsesdato",
-  "adminDashboard": "Adminpanel",
+  "adminDashboard": "Admin Dashboard",
   "filterByStatus": "Filtrer efter Status",
   "searchByOrderNumber": "Søg efter Ordrenummer",
   "actions": "Handlinger",
   "viewDetails": "Se Detaljer",
-  "close": "Luk"
+  "close": "Luk",
+  "welcomeMessage": "Velkommen til vores Garanti Krav Portal",
+  "homeDescription": "Let og effektiv garanti krav administration for vores værdsatte kunder.",
+  "footerText": "© {{year}} Garanti Krav Portal. Alle rettigheder forbeholdes.",
+  "pending": "Afventer",
+  "inProgress": "Igangværende",
+  "resolved": "Løst",
+  "rejected": "Afvist",
+  "claimStatus": "Krav Status",
+  "failedToFetchClaim": "Kunne ikke hente krav",
+  "errorFetchingClaim": "Der opstod en fejl under hentning af kravet",
+  "noClaimFound": "Ingen krav fundet",
+  "pleaseAcknowledgeNotification": "Venligst bekræft mærke anmeldelsen",
+  "failedToSubmitClaim": "Kunne ikke indsende krav",
+  "errorSubmittingClaim": "Der opstod en fejl under indsendelse af kravet",
+  "selectBrand": "Vælg et mærke",
+  "importantNotice": "Vigtig Meddelelse",
+  "acknowledgeInformation": "Jeg bekræfter denne information"
 }
