--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -1,14 +1,14 @@
 {
-  "warrantyClaimsPortal": "Portal de Reclamaciones de Garantía",
+  "warrantyClaimsPortal": "Portal de Reclamos de Garantía",
   "home": "Inicio",
-  "newClaim": "Nueva Reclamación",
+  "newClaim": "Nuevo Reclamo",
   "checkStatus": "Verificar Estado",
   "admin": "Administrador",
-  "login": "Iniciar Sesión",
-  "logout": "Cerrar Sesión",
-  "submitClaim": "Enviar una Reclamación",
-  "orderNumber": "Número de Pedido",
-  "email": "Correo Electrónico",
+  "login": "Iniciar sesión",
+  "logout": "Cerrar sesión",
+  "submitClaim": "Enviar Reclamo",
+  "orderNumber": "Número de Orden",
+  "email": "Correo electrónico",
   "name": "Nombre",
   "street": "Calle",
   "postalCode": "Código Postal",
@@ -17,13 +17,31 @@
   "brand": "Marca",
   "problemDescription": "Descripción del Problema",
   "submit": "Enviar",
-  "checkClaimStatus": "Verificar Estado de la Reclamación",
+  "submitting": "Enviando...",
+  "checkClaimStatus": "Verificar Estado del Reclamo",
   "status": "Estado",
   "submissionDate": "Fecha de Envío",
   "adminDashboard": "Panel de Administración",
   "filterByStatus": "Filtrar por Estado",
-  "searchByOrderNumber": "Buscar por Número de Pedido",
+  "searchByOrderNumber": "Buscar por Número de Orden",
   "actions": "Acciones",
   "viewDetails": "Ver Detalles",
-  "close": "Cerrar"
+  "close": "Cerrar",
+  "welcomeMessage": "Bienvenido a nuestro Portal de Reclamos de Garantía",
+  "homeDescription": "Gestión fácil y eficiente de reclamos de garantía para nuestros valiosos clientes.",
+  "footerText": "© {{year}} Portal de Reclamos de Garantía. Todos los derechos reservados.",
+  "pending": "Pendiente",
+  "inProgress": "En Proceso",
+  "resolved": "Resuelto",
+  "rejected": "Rechazado",
+  "claimStatus": "Estado del Reclamo",
+  "failedToFetchClaim": "No se pudo obtener el reclamo",
+  "errorFetchingClaim": "Ocurrió un error al obtener el reclamo",
+  "noClaimFound": "No se encontró ningún reclamo",
+  "pleaseAcknowledgeNotification": "Por favor, reconozca la notificación de la marca",
+  "failedToSubmitClaim": "No se pudo enviar el reclamo",
+  "errorSubmittingClaim": "Ocurrió un error al enviar el reclamo",
+  "selectBrand": "Seleccionar una marca",
+  "importantNotice": "Aviso Importante",
+  "acknowledgeInformation": "Reconozco esta información"
 }
