--- a/src/locales/et.json
+++ b/src/locales/et.json
@@ -1,11 +1,11 @@
 {
-  "warrantyClaimsPortal": "Garantiinõuete Portal",
+  "warrantyClaimsPortal": "Garantiinõuete Portaal",
   "home": "Avaleht",
   "newClaim": "Uus Nõue",
-  "checkStatus": "Kontrolli Staatust",
-  "admin": "Admin",
-  "login": "Logi Sisse",
-  "logout": "Logi Välja",
+  "checkStatus": "Kontrolli Olekut",
+  "admin": "Administraator",
+  "login": "Logi sisse",
+  "logout": "Logi välja",
   "submitClaim": "Esita Nõue",
   "orderNumber": "Tellimuse Number",
   "email": "E-post",
@@ -17,13 +17,31 @@
   "brand": "Bränd",
   "problemDescription": "Probleemi Kirjeldus",
   "submit": "Esita",
-  "checkClaimStatus": "Kontrolli Nõude Staatust",
-  "status": "Staatus",
+  "submitting": "Esitamine...",
+  "checkClaimStatus": "Kontrolli Nõude Olekut",
+  "status": "Olek",
   "submissionDate": "Esitamise Kuupäev",
-  "adminDashboard": "Administraatori Paneel",
-  "filterByStatus": "Filtreeri Staatuse Järgi",
-  "searchByOrderNumber": "Otsi Tellimuse Numbri Järgi",
+  "adminDashboard": "Administraatori Töölaud",
+  "filterByStatus": "Filtreeri Olekuga",
+  "searchByOrderNumber": "Otsi Tellimuse Numbriga",
   "actions": "Tegevused",
-  "viewDetails": "Vaata Detaile",
-  "close": "Sulge"
+  "viewDetails": "Vaata Üksikasju",
+  "close": "Sulge",
+  "welcomeMessage": "Tere tulemast meie Garantiinõuete Portaali",
+  "homeDescription": "Lihtne ja tõhus garantiinõuete haldamine meie hinnatud klientidele.",
+  "footerText": "© {{year}} Garantiinõuete Portaal. Kõik õigused kaitstud.",
+  "pending": "Ootel",
+  "inProgress": "Käsitlemisel",
+  "resolved": "Lahendatud",
+  "rejected": "Tagasilükatud",
+  "claimStatus": "Nõude Olek",
+  "failedToFetchClaim": "Nõude hankimine ebaõnnestus",
+  "errorFetchingClaim": "Nõude hankimisel tekkis viga",
+  "noClaimFound": "Nõuet ei leitud",
+  "pleaseAcknowledgeNotification": "Palun kinnitage kaubamärgi teavitus",
+  "failedToSubmitClaim": "Nõude esitamine ebaõnnestus",
+  "errorSubmittingClaim": "Nõude esitamisel tekkis viga",
+  "selectBrand": "Vali kaubamärk",
+  "importantNotice": "Tähtis Teade",
+  "acknowledgeInformation": "Kinnitan selle teabe"
 }
