--- a/src/locales/fi.json
+++ b/src/locales/fi.json
@@ -1,11 +1,11 @@
 {
-  "warrantyClaimsPortal": "Takuuvaatimusportaali",
+  "warrantyClaimsPortal": "Takuuvaatimusten Portaali",
   "home": "Koti",
   "newClaim": "Uusi Vaatimus",
   "checkStatus": "Tarkista Tila",
-  "admin": "Ylläpitäjä",
-  "login": "Kirjaudu Sisään",
-  "logout": "Kirjaudu Ulos",
+  "admin": "Ylläpito",
+  "login": "Kirjaudu sisään",
+  "logout": "Kirjaudu ulos",
   "submitClaim": "Lähetä Vaatimus",
   "orderNumber": "Tilausnumero",
   "email": "Sähköposti",
@@ -17,13 +17,31 @@
   "brand": "Merkki",
   "problemDescription": "Ongelman Kuvaus",
   "submit": "Lähetä",
+  "submitting": "Lähetetään...",
   "checkClaimStatus": "Tarkista Vaatimuksen Tila",
   "status": "Tila",
   "submissionDate": "Lähetyspäivä",
-  "adminDashboard": "Ylläpitäjän Hallintapaneeli",
-  "filterByStatus": "Suodata Tilan Mukaan",
+  "adminDashboard": "Ylläpidon Hallintapaneeli",
+  "filterByStatus": "Suodata Tilanteen Mukaan",
   "searchByOrderNumber": "Hae Tilausnumerolla",
   "actions": "Toiminnot",
-  "viewDetails": "Näytä Tiedot",
-  "close": "Sulje"
+  "viewDetails": "Katso Yksityiskohdat",
+  "close": "Sulje",
+  "welcomeMessage": "Tervetuloa Takuun Vaatimusportaaliin",
+  "homeDescription": "Helppo ja tehokas takuukäsittely asiakkaillemme.",
+  "footerText": "© {{year}} Takuun Vaatimusportaali. Kaikki oikeudet pidätetään.",
+  "pending": "Odottaa",
+  "inProgress": "Käynnissä",
+  "resolved": "Ratkaistu",
+  "rejected": "Hylätty",
+  "claimStatus": "Vaatimuksen Tila",
+  "failedToFetchClaim": "Vaatimusta ei voitu hakea",
+  "errorFetchingClaim": "Vaatimuksen haussa tapahtui virhe",
+  "noClaimFound": "Vaatimusta ei löytynyt",
+  "pleaseAcknowledgeNotification": "Vahvista tuotemerkin ilmoitus",
+  "failedToSubmitClaim": "Vaatimuksen lähetys epäonnistui",
+  "errorSubmittingClaim": "Vaatimuksen lähetyksessä tapahtui virhe",
+  "selectBrand": "Valitse merkki",
+  "importantNotice": "Tärkeä Ilmoitus",
+  "acknowledgeInformation": "Vahvistan tiedon"
 }
