--- a/src/locales/nl.json
+++ b/src/locales/nl.json
@@ -1,13 +1,13 @@
 {
-  "warrantyClaimsPortal": "Garantieclaims Portal",
+  "warrantyClaimsPortal": "Garantieclaim Portaal",
   "home": "Home",
   "newClaim": "Nieuwe Claim",
-  "checkStatus": "Status Controleren",
+  "checkStatus": "Controleer Status",
   "admin": "Beheerder",
   "login": "Inloggen",
   "logout": "Uitloggen",
   "submitClaim": "Claim Indienen",
-  "orderNumber": "Bestelnummer",
+  "orderNumber": "Ordernummer",
   "email": "E-mail",
   "name": "Naam",
   "street": "Straat",
@@ -17,13 +17,31 @@
   "brand": "Merk",
   "problemDescription": "Probleembeschrijving",
   "submit": "Indienen",
-  "checkClaimStatus": "Claimstatus Controleren",
+  "submitting": "Indienen...",
+  "checkClaimStatus": "Controleer Claimstatus",
   "status": "Status",
-  "submissionDate": "Indieningsdatum",
-  "adminDashboard": "Beheerderspaneel",
-  "filterByStatus": "Filteren op Status",
-  "searchByOrderNumber": "Zoeken op Bestelnummer",
+  "submissionDate": "Datum van Indienen",
+  "adminDashboard": "Beheerdersdashboard",
+  "filterByStatus": "Filter op Status",
+  "searchByOrderNumber": "Zoek op Ordernummer",
   "actions": "Acties",
-  "viewDetails": "Details Bekijken",
-  "close": "Sluiten"
+  "viewDetails": "Bekijk Details",
+  "close": "Sluiten",
+  "welcomeMessage": "Welkom bij ons Garantieclaim Portaal",
+  "homeDescription": "Eenvoudig en efficiënt beheer van garantieclaims voor onze gewaardeerde klanten.",
+  "footerText": "© {{year}} Garantieclaim Portaal. Alle rechten voorbehouden.",
+  "pending": "In Behandeling",
+  "inProgress": "In Proces",
+  "resolved": "Opgelost",
+  "rejected": "Afgewezen",
+  "claimStatus": "Claimstatus",
+  "failedToFetchClaim": "Kon de claim niet ophalen",
+  "errorFetchingClaim": "Er is een fout opgetreden bij het ophalen van de claim",
+  "noClaimFound": "Geen claim gevonden",
+  "pleaseAcknowledgeNotification": "Bevestig de melding van het merk",
+  "failedToSubmitClaim": "Het indienen van de claim is mislukt",
+  "errorSubmittingClaim": "Er is een fout opgetreden bij het indienen van de claim",
+  "selectBrand": "Selecteer een merk",
+  "importantNotice": "Belangrijke Mededeling",
+  "acknowledgeInformation": "Ik bevestig deze informatie"
 }
