--- a/src/locales/no.json
+++ b/src/locales/no.json
@@ -1,12 +1,12 @@
 {
-  "warrantyClaimsPortal": "Portal for Garantikrav",
+  "warrantyClaimsPortal": "Garanti Krav Portal",
   "home": "Hjem",
   "newClaim": "Nytt Krav",
   "checkStatus": "Sjekk Status",
   "admin": "Admin",
-  "login": "Logg Inn",
-  "logout": "Logg Ut",
-  "submitClaim": "Send inn et Krav",
+  "login": "Logg inn",
+  "logout": "Logg ut",
+  "submitClaim": "Send Inn Krav",
   "orderNumber": "Ordrenummer",
   "email": "E-post",
   "name": "Navn",
@@ -15,15 +15,33 @@
   "city": "By",
   "phoneNumber": "Telefonnummer",
   "brand": "Merke",
-  "problemDescription": "Problembeskrivelse",
-  "submit": "Send inn",
-  "checkClaimStatus": "Sjekk Kravstatus",
+  "problemDescription": "Problem Beskrivelse",
+  "submit": "Send Inn",
+  "submitting": "Sender Inn...",
+  "checkClaimStatus": "Sjekk Krav Status",
   "status": "Status",
   "submissionDate": "Innsendingsdato",
-  "adminDashboard": "Adminpanel",
+  "adminDashboard": "Admin Dashbord",
   "filterByStatus": "Filtrer etter Status",
   "searchByOrderNumber": "Søk etter Ordrenummer",
   "actions": "Handlinger",
   "viewDetails": "Se Detaljer",
-  "close": "Lukk"
+  "close": "Lukk",
+  "welcomeMessage": "Velkommen til Vår Garanti Krav Portal",
+  "homeDescription": "Enkel og effektiv garanti krav administrasjon for våre verdsatte kunder.",
+  "footerText": "© {{year}} Garanti Krav Portal. Alle rettigheter reservert.",
+  "pending": "Avventer",
+  "inProgress": "Pågår",
+  "resolved": "Løst",
+  "rejected": "Avvist",
+  "claimStatus": "Krav Status",
+  "failedToFetchClaim": "Kunne ikke hente krav",
+  "errorFetchingClaim": "En feil oppstod under henting av kravet",
+  "noClaimFound": "Ingen krav funnet",
+  "pleaseAcknowledgeNotification": "Vennligst bekreft varselet fra merkevaren",
+  "failedToSubmitClaim": "Kunne ikke sende inn krav",
+  "errorSubmittingClaim": "En feil oppstod under innsending av kravet",
+  "selectBrand": "Velg et merke",
+  "importantNotice": "Viktig Beskjed",
+  "acknowledgeInformation": "Jeg bekrefter denne informasjonen"
 }
