--- a/src/locales/pl.json
+++ b/src/locales/pl.json
@@ -1,29 +1,47 @@
 {
-  "warrantyClaimsPortal": "Portal Roszczeń Gwarancyjnych",
+  "warrantyClaimsPortal": "Portal Reklamacji Gwarancyjnych",
   "home": "Strona Główna",
-  "newClaim": "Nowe Roszczenie",
+  "newClaim": "Nowa Reklamacja",
   "checkStatus": "Sprawdź Status",
-  "admin": "Admin",
+  "admin": "Administrator",
   "login": "Zaloguj się",
   "logout": "Wyloguj się",
-  "submitClaim": "Złóż Roszczenie",
+  "submitClaim": "Złóż Reklamację",
   "orderNumber": "Numer Zamówienia",
   "email": "E-mail",
-  "name": "Imię i Nazwisko",
+  "name": "Imię",
   "street": "Ulica",
   "postalCode": "Kod Pocztowy",
   "city": "Miasto",
   "phoneNumber": "Numer Telefonu",
   "brand": "Marka",
   "problemDescription": "Opis Problemu",
-  "submit": "Wyślij",
-  "checkClaimStatus": "Sprawdź Status Roszczenia",
+  "submit": "Złóż",
+  "submitting": "Składanie...",
+  "checkClaimStatus": "Sprawdź Status Reklamacji",
   "status": "Status",
   "submissionDate": "Data Złożenia",
   "adminDashboard": "Panel Administratora",
   "filterByStatus": "Filtruj według Statusu",
-  "searchByOrderNumber": "Szukaj po Numerze Zamówienia",
-  "actions": "Akcje",
+  "searchByOrderNumber": "Szukaj według Numeru Zamówienia",
+  "actions": "Działania",
   "viewDetails": "Zobacz Szczegóły",
-  "close": "Zamknij"
+  "close": "Zamknij",
+  "welcomeMessage": "Witamy w naszym Portalu Reklamacji Gwarancyjnych",
+  "homeDescription": "Łatwe i efektywne zarządzanie reklamacjami gwarancyjnymi dla naszych cenionych klientów.",
+  "footerText": "© {{year}} Portal Reklamacji Gwarancyjnych. Wszelkie prawa zastrzeżone.",
+  "pending": "Oczekujący",
+  "inProgress": "W trakcie realizacji",
+  "resolved": "Rozwiązany",
+  "rejected": "Odrzucony",
+  "claimStatus": "Status Reklamacji",
+  "failedToFetchClaim": "Nie udało się pobrać reklamacji",
+  "errorFetchingClaim": "Wystąpił błąd podczas pobierania reklamacji",
+  "noClaimFound": "Nie znaleziono reklamacji",
+  "pleaseAcknowledgeNotification": "Proszę potwierdzić powiadomienie marki",
+  "failedToSubmitClaim": "Nie udało się złożyć reklamacji",
+  "errorSubmittingClaim": "Wystąpił błąd podczas składania reklamacji",
+  "selectBrand": "Wybierz markę",
+  "importantNotice": "Ważna Informacja",
+  "acknowledgeInformation": "Potwierdzam te informacje"
 }
