--- a/src/locales/sv.json
+++ b/src/locales/sv.json
@@ -1,12 +1,12 @@
 {
-  "warrantyClaimsPortal": "Portal för Garantianspråk",
+  "warrantyClaimsPortal": "Garantianspråksportalen",
   "home": "Hem",
   "newClaim": "Nytt Anspråk",
   "checkStatus": "Kontrollera Status",
-  "admin": "Admin",
-  "login": "Logga In",
-  "logout": "Logga Ut",
-  "submitClaim": "Skicka in ett Anspråk",
+  "admin": "Administratör",
+  "login": "Logga in",
+  "logout": "Logga ut",
+  "submitClaim": "Skicka In Anspråk",
   "orderNumber": "Ordernummer",
   "email": "E-post",
   "name": "Namn",
@@ -16,14 +16,32 @@
   "phoneNumber": "Telefonnummer",
   "brand": "Märke",
   "problemDescription": "Problembeskrivning",
-  "submit": "Skicka in",
+  "submit": "Skicka In",
+  "submitting": "Skickar...",
   "checkClaimStatus": "Kontrollera Anspråksstatus",
   "status": "Status",
   "submissionDate": "Inlämningsdatum",
-  "adminDashboard": "Adminpanel",
+  "adminDashboard": "Administratörspanel",
   "filterByStatus": "Filtrera efter Status",
   "searchByOrderNumber": "Sök efter Ordernummer",
   "actions": "Åtgärder",
   "viewDetails": "Visa Detaljer",
-  "close": "Stäng"
+  "close": "Stäng",
+  "welcomeMessage": "Välkommen till vår Garantianspråksportal",
+  "homeDescription": "Enkel och effektiv hantering av garantianspråk för våra värderade kunder.",
+  "footerText": "© {{year}} Garantianspråksportalen. Alla rättigheter förbehållna.",
+  "pending": "Väntande",
+  "inProgress": "Pågår",
+  "resolved": "Löst",
+  "rejected": "Avvisat",
+  "claimStatus": "Anspråksstatus",
+  "failedToFetchClaim": "Misslyckades med att hämta anspråk",
+  "errorFetchingClaim": "Ett fel uppstod vid hämtning av anspråk",
+  "noClaimFound": "Inget anspråk hittades",
+  "pleaseAcknowledgeNotification": "Vänligen bekräfta meddelandet från märket",
+  "failedToSubmitClaim": "Misslyckades med att skicka in anspråk",
+  "errorSubmittingClaim": "Ett fel uppstod vid inlämning av anspråk",
+  "selectBrand": "Välj ett märke",
+  "importantNotice": "Viktigt Meddelande",
+  "acknowledgeInformation": "Jag bekräftar denna information"
 }
